Document host switching script

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 If running on local mobile device using sd-mbpr.local, you will need to enable the following flag in Chrome:
 chrome://flags/#unsafely-treat-insecure-origin-as-secure
+
+Use `./scripts/switch-dev-host.sh [localhost|wifi]` to set development URL
